* Added stamp function for pencil: right-click, drag now creates a stamp
  for easy copying
* Added core support for animated tiles
* Added more error-checking to XMLMapTransformer, the default map reader
* Added support for "tile cutters"
* Added global properties for tilesets (properties set for all tiles)
* Added the ability to merge tile images when layers are merged
* Fixed tileset dialog so that it is now possible to change the tile height to
  something other than the tile height used by the map.
* Fixed a bug when exporting a tileset with an external image
* Fixed two cases of hanging when using the fill tool
* Fixed tile palette bug of not accounting for gaps in tile ids (old bug)
* Fixed bug of adding a new tile even if cancelling out of new tile dialog
* Fixed NPE when saving a map with no extension - default to .tmx
* Fixed the zooming so that it keeps the center in place
* Fixed exiting even when a request to save the changes failed
* Fixed layer merging so that undo/redo of operation is functional
* Rewrote configuration based on the Preferences class, no more tiled.conf
* Cleaned up TileSet (removed checksumming and rotation/orienation code)

0.5.1 - June 15th, 2005

* Added a checkerboard background to tileset palette
* Added support for layer locking (not editable when locked)
* Added support for tmx.gz map files
* Added selection addition and substraction via Shift and Ctrl respectively
* Improved the drawing speed thanks to some thorough testing and suggestions
  (Jerome Blouin)
* Improved transformation so that it respects selections
* Fixed the "Save As Image" feature to use current zoom level
* Fixed drawing on invisible layers
* Fixed selection rectangle to include one more tile
* Fixed loading of plugins that only do export and no import
* Fixed removing tilesets in the Tileset Manager
* Fixed image loading to ensure hardware acceleration is used in Java 1.4 and
  above (Jerome Blouin)