@@ -12,10 +12,12 @@
 
 package tiled.mapeditor.actions;
 
+import java.util.prefs.Preferences;
 import javax.swing.KeyStroke;
 
 import tiled.mapeditor.MapEditor;
 import tiled.mapeditor.Resources;
+import tiled.util.TiledConfiguration;
 
 /**
  * Exits the map editor.
@@ -33,6 +35,11 @@ public class ExitAction extends AbstractFileAction
     }
 
     protected void doPerformAction() {
+        // Save the extended window state if the window isn't minimized
+        Preferences prefs = TiledConfiguration.node("dialog/main");
+        int extendedState = editor.getAppFrame().getExtendedState();
+        prefs.putInt("state", extendedState);
+
         System.exit(0);
     }
 }
